Fix resizing; fix mass tort and insurance images; fix links to practice areas on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1351,7 +1351,6 @@ nav ul, nav ol{margin:0; padding:0; list-style:none;}
   position: relative;
   width: 100%;
   padding: 30px;
-  float: left;
   background: #fff;
   border: 1px solid rgbs(#000, 0.2);
   -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
